--- a/index.html.html
+++ b/index.html.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CocaCola Product Card - codingstella </title>
+  <title>Nantawwin funiture - funiture </title>
   <link rel="stylesheet" href="style.css">
 
 </head>
