--- a/index.html.html
+++ b/index.html.html
@@ -13,8 +13,8 @@
     <img src="temple.png.png" class="logo">
   </div>
   <div class="content">
-    <h2>နန်းတော်ဝင်း</h2>
-    <p>ပရိဘောဂ နှင့် မီးဖိုချောင်သုံးပစ္စည်း (ကျွန်းတံခါး၊ ကျည်း‌ဘောင်၊ ပါကေး) </br>ရန်ကုန် - ရန်ကုန် - မန္တလေးလမ်းဟောင်း/အမှန်(5)ရပ်ကွက်၊ဧရာဝတီဘဏ်အနီး၊လယ်ဝေးမြို။ </br>Tel: 09775156548, 0942237778, 09427228727</p> 
+    <h2>နန်းတော်ဝင်</h2>
+    <p>ပရိဘောဂ နှင့် မီးဖိုချောင်သုံးပစ္စည်း (ကျွန်းတံခါး၊ ကျည်း‌ဘောင်၊ ပါကေး) </br>ရန်ကုန် - မန္တလေးလမ်းဟောင်း/အမှန်(5)ရပ်ကွက်၊ဧရာဝတီဘဏ်အနီး၊လယ်ဝေးမြို။ </br>Tel: 09775156548, 09424237778, 09427228727</p> 
      
   </div>
   <img src="temple.png.png" class="product_img">
